[tool.poetry]
name = "web-python17m9"
version = "0.1.0"
description = ""
authors = ["hedgyv <hedgy85@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.40.0"
scrapy = "^2.11.0"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
